force-app/main/default/objects/OrgSandbox__c/OrgSandbox__c.object-meta.xml
<CustomObject>
    <description>Organization Sandbox information retrieved during polling for the org search functionality</description>
    <label>OrgSandbox</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrgSandboxes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>