force-app/main/default/objects/OrgSandbox__c/fields/ActivatedDate__c.field-meta.xml
<CustomField>
    <fullName>ActivatedDate__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>&quot;Completed On&quot; date for the Sandbox. Note: This is pulled from the EndDate field in Salesforce, not the ActivatedDate.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ActivatedDate</label>
    <type>DateTime</type>
</CustomField>