force-app/main/default/objects/OrgSandbox__c/fields/SandboxId__c.field-meta.xml
<CustomField>
    <fullName>SandboxId__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Sandbox org Id</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SandboxId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>