force-app/main/default/objects/OrgSandbox__c/fields/SandboxStatus__c.field-meta.xml
<CustomField>
    <fullName>SandboxStatus__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Status of the license (Deleted has been filtered out)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SandboxStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>